# aws-explorer

./: .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  .pylintrc  .ruff.toml  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt  run.py  run_rich.py  setup.py  tox.ini
.github/workflows/: python-package.yml
aws_explorer/: __init__.py  account.py  accounts.py  backup.py  cloudformation.py  cloudtrail.py  cloudwatch.py  cloudwatch_logs.py  config.py  dynamo_db.py  ec2.py  ecs.py  iam.py  lambda_manager.py  logger.py  rds.py  s3.py  s3_temp.py  session.py  sessions.py  ssm.py  sts.py  types.py  utils.py
docs/: GIT.md  LICENSE.md  MISC.md  NOTES.md  README.md  TODO.md  chatgpt.md  conda_cheat_sheet.md  design.md
notebooks/: nb_execute.ipynb  nb_git.ipynb  nb_tooling.ipynb
scripts/: inotifywait.sh  run_main.py  timed_test_tunner.sh  watch_and_run.sh  watch_and_test.sh  watched_app_runner.sh  watched_test_runner.sh
scripts/notebooks/: aws-explorer.ipynb  github_workflow.ipynb  nb_execute.ipynb  nb_git.ipynb  nb_setup_install.ipynb  nb_tooling.ipynb  run_main.py
tests/: __init__.py  conftest.py  constants.py  test_account.py  test_ec2_manager.py  test_iam.py  test_iam_manager.py  test_s3.py  test_s3_manager.py  test_session.py  test_sts.py  test_sts_manager.py
