[project]
name        = "aws-explorer"
description = "aws-explorer is a CLI tool to explore AWS resources"
version     = "0.1.0"
authors     = [{ name = "Phillip Matheson", email = "matheson.phillip@gmail.com" }]

[build-system]
requires      = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 150
target-version = ['py310']